simplified - no subprojects